Upload key dialog - valign center fix

--- a/services/self-service/src/main/resources/webapp/src/client/app/components/modal/modal.component.css
+++ b/services/self-service/src/main/resources/webapp/src/client/app/components/modal/modal.component.css
@@ -1,3 +1,7 @@
+div.modal
+{
+  position: relative;
+}
 .modal-dialog {
   width: 525px;
 }
